--- a/src/css/members.css
+++ b/src/css/members.css
@@ -51,5 +51,8 @@
 .members {
   overflow-y: auto;
   overflow-x: auto;
+  display: flex;
+  align-content: center;
+  justify-content: center;
   height: 68vh;
 }
